# kalshi-sys

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  LONG_TERM_PLAN.md  Makefile  README.md  REPORT.md  VISION.md  kalshi_alpha_long_term_plan.md  pyproject.toml
.github/workflows/: ci.yml
configs/: fee_rules_watch.yaml  fees.json  freshness.index.yaml  freshness.yaml  index_correlation.yaml  index_ops.yaml  index_var.yaml  pal_policy.example.yaml  pal_policy.yaml  pilot.yaml  pilot_bins4.yaml  portfolio.yaml  quality_gates.example.yaml  quality_gates.index.yaml  quality_gates.yaml  series.yaml  size_ladder.yaml
configs/fees/: series.json
configs/launchd/: kalshi_polygon_ws.plist
configs/logrotate/: kalshi-alpha
configs/strategies/: cpi.yaml
configs/systemd/: kalshi-alpha-monitors.service  kalshi-alpha-monitors.timer  kalshi-alpha-runner.service  kalshi-alpha-runner.timer  kalshi-alpha-telemetry.service  kalshi-alpha-telemetry.timer
data/bootstrap/: aaa_daily_2004_2025.csv
data/reference/: index_execution_defaults.json  index_fee_curves.json  kalshi_fee_schedule.json
dev/: parse_fees.py
docker/aws-jobs/: Dockerfile
docs/: ACCESS.md  CHANGELOG_INDEX.md  RUNBOOK.md  live_ops.md  promotion_ladder.md
docs/index_ladders/: aws_supervisor_index.md  aws_windows.md
docs/rules/: index_rules.md
docs/runbooks/: eod.md  hourly.md  outage_playbook.md  postmortem_template.md
jobs/: __init__.py  _index_calibration.py  calib_eod.py  calib_hourly.py  calibrate_close.py  calibrate_hourly.py  calibrate_index_polygon_model.py  calibrate_noon.py  fit_index_execution.py
monitor/: drift_sigma_tod.py  fee_rules_watch.py
report/: __init__.py  digest.py  honesty.py
report/agent_logs/: 20251120_codex_notes.md  20251121_codex_backtest_kalshi_quotes.md  20251121_codex_index_paper_ledger_scoreboard.md  20251121_codex_model_backtest.md  20251121_codex_notes.md  20251121_codex_preflight_supervisor_index.md  20251121_codex_ws_fast_tests.md
reports/: pilot_readiness.md  pilot_ready.json  scoreboard_30d.md  scoreboard_7d.md
reports/CPI/: 2025-11-02.md  2025-11-03.md
reports/INX/: 2025-11-04.md  2025-11-06.md  2025-11-11.md  2025-11-12.md
reports/INXU/: 2025-11-04.md  2025-11-06.md  2025-11-10.md  2025-11-11.md  2025-11-12.md  2025-11-13.md  2025-11-14.md  2025-11-17.md
reports/NASDAQ100/: 2025-11-04.md  2025-11-06.md  2025-11-11.md  2025-11-12.md
reports/NASDAQ100U/: 2025-11-04.md  2025-11-06.md  2025-11-10.md  2025-11-11.md  2025-11-12.md  2025-11-13.md  2025-11-14.md  2025-11-17.md
reports/_artifacts/: 20251102T230336_ledger.csv  20251102T230336_ledger.json  20251102T231358_ledger.csv  20251102T231358_ledger.json  20251102T231405_ledger.csv  20251102T231405_ledger.json  20251103T001336_ledger.csv  20251103T001336_ledger.json  20251104T005154_ledger.csv  20251104T005154_ledger.json  20251104T005202_ledger.csv  20251104T005202_ledger.json  20251104T005209_ledger.csv  20251104T005209_ledger.json  20251104T005215_ledger.csv  20251104T005215_ledger.json  20251104T005359_ledger.csv  20251104T005359_ledger.json  20251104T005429_ledger.csv  20251104T005429_ledger.json  20251104T005436_ledger.csv  20251104T005436_ledger.json  20251104T005445_ledger.csv  20251104T005445_ledger.json  20251104T010931_ledger.csv  20251104T010931_ledger.json  20251104T010940_ledger.csv  20251104T010940_ledger.json  20251104T010947_ledger.csv  20251104T010947_ledger.json  20251104T010955_ledger.csv  20251104T010955_ledger.json  20251104T011516_ledger.csv  20251104T011516_ledger.json  20251104T011525_ledger.csv  20251104T011525_ledger.json  20251104T011536_ledger.csv  20251104T011536_ledger.json  20251104T011545_ledger.csv  20251104T011545_ledger.json  (+160 more)
reports/digests/: digest_2025-11-10.md  digest_2025-11-11.md
scripts/: __init__.py  aws_job.py  build_index_panel_polygon.py  check_promotion_ladder.py  live_hourly_loop.py  make_index_fixtures.sh  massive_ws_probe.py  parity_gate.py  pilot_teny.py  polygon_dump.py  proof_of_fill.py  run_indices_listener.py  run_indices_ws.sh  run_polygon_ws.sh
src/kalshi_alpha/: __init__.py
src/kalshi_alpha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_align.py  test_alpha_autotune.py  test_archive_and_replay.py  test_archiver_replay.py  test_broker_dry.py  test_broker_live_safety.py  test_calendar_loader.py  test_calendar_resolver.py  test_check_promotion_ladder.py  test_claims_calib.py  test_claims_v15.py  test_clear_dry_orders_start.py  test_cleveland_nowcast.py  test_config.py  test_config_guardrails.py  test_core_ws.py  test_correlation_var.py  test_cpi_calib.py  test_cpi_v15.py  test_cpi_yoy_guard.py  test_datastore.py  test_drawdown_halt.py  test_drivers_offline.py  test_ev_honesty_gate.py  test_exec_fees.py  test_exec_scanner.py  test_execution_calibration.py  test_failover.py  test_family_switch.py  test_fee_rules_watch.py  test_fees.py  test_fees_index.py  test_fill_model.py  test_fill_realism_gate.py  test_fillprob.py  test_fillratio.py  test_fillratio_depth_aware.py  test_fillratio_parity.py  (+104 more)
tests/backtest/: test_generate_dataset.py  test_index_calendar.py  test_polygon_index_replay.py  test_scoring.py
tests/brokers/: test_import_guard.py  test_kalshi_http_client.py  test_kalshi_ws_client.py
tests/config/: test_size_ladder.py
tests/data_fixtures/: __init__.py  index_exec_holdout.parquet
tests/dev/: test_sanity_check.py
tests/drivers/: test_kalshi_index_history.py  test_polygon_index_ws.py
tests/exec/: test_backtest_index_polygon.py  test_fast_index_scans.py  test_freshness_gate_index.py  test_index_paper_ledger.py  test_preflight_index.py  test_scoreboard_index_paper.py  test_supervisor_index.py  test_time_awareness.py  test_ws_lifecycle.py
tests/telemetry/: test_shipper.py  (+1 more)
tools/: __init__.py  failover_smoke.py  replay.py
(+430 files in other folders)
