[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-alpha"
version = "0.1.0"
description = "Monorepo for Kalshi ladder pricing, scanning, and research."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Kalshi Alpha Team" },
]
license = { text = "MIT" }
dependencies = [
  "requests>=2.32.3",
  "cryptography>=43.0.0",
  "websockets>=12.0",
  "pydantic>=2.7.0",
  "polars>=1.6.0",
  "duckdb>=0.10.2",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.1",
  "cachetools>=4.2,<5",
  "python-dotenv>=1.0.1",
  "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "hypothesis>=6.99.0",
  "ruff>=0.5.6",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20240914",
  "types-python-dateutil>=2.9.0.20240821",
  "types-pyyaml>=6.0.12.20240813",
  "pre-commit>=3.7.1",
  "requests-mock>=1.12.1",
]

[project.scripts]
kalshi-scan = "kalshi_alpha.exec.runners.scan_ladders:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kalshi_alpha*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
plugins = ["pydantic.mypy"]
follow_imports = "skip"
files = [
  "src/kalshi_alpha/exec/runners/scan_ladders.py",
  "src/kalshi_alpha/exec/pilot/runtime.py",
  "src/kalshi_alpha/exec/pilot/config.py",
  "src/kalshi_alpha/exec/pilot_bundle.py",
  "src/kalshi_alpha/exec/reports/ramp.py",
  "src/kalshi_alpha/exec/runners/pilot.py",
  "src/kalshi_alpha/exec/pipelines/calendar.py",
  "src/kalshi_alpha/exec/pipelines/week.py",
]

[[tool.mypy.overrides]]
module = ["duckdb", "polars", "cachetools", "cryptography.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kalshi_alpha.exec.scoreboard"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kalshi_alpha.strategies.teny.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kalshi_alpha.strategies.cpi.components"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kalshi_alpha.strategies.claims.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kalshi_alpha.exec.runners.scan_ladders"
ignore_errors = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "DTZ", "TID", "ERA", "PL", "ANN"]
ignore = ["S101", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ANN", "DTZ011", "PLC0415", "S311"]
"src/kalshi_alpha/core/archive/replay.py" = ["PLR0912", "PLR0913", "PLR0915", "E501"]
"src/kalshi_alpha/exec/runners/scan_ladders.py" = ["PLR0912", "PLR0913", "PLR0915", "PLW0603"]
"src/kalshi_alpha/exec/pipelines/daily.py" = ["PLR0912", "PLR0913", "PLR0915"]
"src/kalshi_alpha/core/gates/quality_gates.py" = ["PLR0912", "PLR0913", "PLR0915"]
"src/kalshi_alpha/strategies/cpi/__init__.py" = ["PLR0913"]
"src/kalshi_alpha/strategies/teny/__init__.py" = ["PLR0913"]
"tests/test_heartbeat_refresh.py" = ["PLR0913"]
"tests/test_preset_autoresolve.py" = ["PLR0913"]
"src/kalshi_alpha/exec/monitors/runtime.py" = ["PLR0913"]
"src/kalshi_alpha/exec/monitors/sequential.py" = ["PLR0912", "PLR0915"]
"src/kalshi_alpha/exec/pipelines/week.py" = ["PLR0912", "PLR0915"]
"tests/conftest.py" = ["PLR0915"]
"tests/test_force_run_dry.py" = ["PLR0915"]
"src/kalshi_alpha/exec/pipelines/today.py" = ["PLR0912"]
"src/kalshi_alpha/exec/reports/ramp.py" = ["PLR0912", "PLR0913", "PLR0915"]
"src/kalshi_alpha/exec/pilot/runtime.py" = ["PLR0912"]
"src/kalshi_alpha/exec/pilot_bundle.py" = ["PLR0912", "PLR0915"]

[tool.ruff.lint.isort]
known-first-party = ["kalshi_alpha"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
branch = true
omit = ["tests/*", "notebooks/*"]
